--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "bower": "^1.8.14",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.4.3",
-    "ejs": "~2.5.2",
+    "ejs": "^3.1.8",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "lodash": "^4.17.20",
