--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bower": "^1.8.14",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.4.3",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
@@ -24,9 +25,10 @@
     "passport-facebook": "~2.1.1",
     "passport-google-oauth": "~1.0.0",
     "passport-local": "~1.0.0",
-    "passport-twitter": "^0.1.5"
+    "passport-twitter": "^0.1.5",
+    "twilio": "^3.77.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "nodemon": "^1.3.3"
   }
 }
